--- a/styles/main.css
+++ b/styles/main.css
@@ -284,7 +284,7 @@ opacity: 0;
 /* livraison */
 
 #livraison{
-padding-bottom: 50px;
+padding-bottom: 20px;
 }
 .livraisonImage{
   height: 100%;
@@ -324,7 +324,7 @@ padding-bottom: 50px;
 .background{
 margin: 0 auto;
 width: 100%;
-height: 2000px;
+height: 1600px;
 background: url("../images/image6.jpeg");
 background-size: 100% 100%;
 background-attachment: fixed;
@@ -341,7 +341,7 @@ display: flex;
 flex-wrap: wrap;
 margin-bottom:  50px;
 }
-.h2NotreFormule, .h2Livraison, .h2Glocalisation{
+.h2NotreFormule, .h2Livraison, .h2Glocalisation, .h2faq{
 display: flex;
 justify-content: center;
 padding: 20px 0 20px 0 ;
@@ -423,7 +423,7 @@ line-height: 45px;
 .background2{
 margin: 0 auto;
 width: 100%;
-height: 1600px;
+height: 1800px;
 background: url("../images/image8.jpeg");
 background-size: 100% 100%;
 background-attachment: fixed;
@@ -434,7 +434,6 @@ position: relative;
 margin: 0 auto;
 width: 100%;
 height: auto;
-padding-bottom: 30px;
 background-color: #000;
 }
 
@@ -532,7 +531,8 @@ margin: 0 auto;
 }
 
 .info{
-margin-top: 15px;
+  margin-left: -30px;
+  margin-top: 10px;
 }
 
 .info p:first-of-type{
@@ -550,7 +550,7 @@ flex-wrap: nowrap;
 }
 
 .LinkPage ul li{
-margin: 20px;
+margin: 15px;
 }
 
 
@@ -563,7 +563,7 @@ padding : 5px;
 
 .lineV{
 margin:20px;
-height:150px;
+height:295px;
 color: black;
 border-right: solid;
 border-right-width: 1px;
@@ -597,10 +597,10 @@ border-bottom-color: black;
 
 }
 
-.h2Gallery, .h2faq{
+.h2Gallery{
   display: flex;
   justify-content: center;
-  margin: 20PX auto;
+  margin: 0px  auto 20px auto;
   font-size: 45px;
   width: 100%;
   padding: 10px 0px;
@@ -629,7 +629,7 @@ opacity:0.7;
 }
 
 .localisation_container_p{
-  margin: 75px auto; 
+  margin: 85px auto; 
 }
 
 .localisation_container_p p{
@@ -731,7 +731,6 @@ main ul li h3::after{
 /* PAGE CONTACT*/
 
 /* block de tete */
-
 
 .head_block{
 position: relative;
@@ -873,10 +872,31 @@ transition: color 0.4s ease, transform 0.4s, background-color 0.4s ease;
 .resto_data h4{
   margin: 32px auto;
   font-size: 24px;
-  color:#589442;
+  font-family: 'MontserratRegular';
   text-transform: uppercase;
+  color: #c01626;
 }
-.resto_data p{
+.Tel_block{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.Tel_block hr{
+  margin: 30px auto;
+  width: 100%;
+  border: 1px solid #589442;
+}
+.Tel_block a{
+  font-size: 20px;
+  transition: color 0.4s ease;
+  margin: 20px auto;
+}
+.Tel_block a:hover {
+  transition: color 0.4s ease;
+  color:#c21626;
+}
+
+.form_title p{
     width: 200px;
     margin-bottom: 0; 
     font-family: 'MontserratRegular';
@@ -886,11 +906,16 @@ transition: color 0.4s ease, transform 0.4s, background-color 0.4s ease;
   font-size: 20px;
   transition: color 0.4s ease;
 }
-.resto_data a:hover {
+.form_title a:hover {
   transition: color 0.4s ease;
   color:#589442;
 }
-
+.resto_data .form_title h4{
+  margin: 32px auto;
+  font-size: 24px;
+  color:#589442;
+  text-transform: uppercase;
+}
 .form_title hr{
   margin: 30px auto;
   width: 100%;
